# py-cpp-demangle

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  README.rst  appveyor.yml  dev-requirements.txt  info.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: create_wheels.yaml
ci/: install_rust.sh
src/: alias_cpp_demangle.rs  delim_iter.rs  fileblocks.rs  lib.rs  svmlight.rs
svm2csr/: __init__.py  load.py
tests/: test_demangle.py  test_load_binding.py
