[package]
name = "py_cpp_demangle"
version = "0.1.3"
authors = ["Ben Frederickson <github@benfrederickson.com>"]
edition = "2021"

[lib]
name = "cpp_demangle"
crate-type = ["cdylib"]

[dependencies]
cpp_demangle = "0.5.1"

[dependencies.pyo3]
version = "0.28.3"
features = ["extension-module", "abi3"]
