[package]
name = "py_cpp_demangle"
version = "0.1.3"
authors = ["Ben Frederickson <github@benfrederickson.com>", "Andrew V. Teylu <andrew@tey.lu>"]
edition = "2021"

[lib]
name = "cpp_demangle"
crate-type = ["cdylib"]

[dependencies]
cpp_demangle = "0.4.0"
msvc-demangler = "0.9.0"

[dependencies.pyo3]
version = "0.17.3"
features = ["extension-module", "abi3"]
